<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="_45_u2103">45 ℃</string>
    <string name="all_files">All Files</string>
    <string name="apks">APKs</string>
    <string name="app_name">Phone Cleaner</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_needs_permission">Application needs you permission to access SD Card</string>
    <string name="appname">MobiClean</string>
    <string name="audios">Audio</string>
    <string name="avira">Avira</string>
    <string name="battery_boost_process_wait">Battery Booster is in progress. Please wait!</string>
    <string name="battery_boost_processing">Battery Boosting in Process</string>
    <string name="big">Big</string>
    <string name="channel_description">Search Notification Channel</string>
    <string name="channel_name">Notification Channel</string>
    <string name="cold">Cold</string>
    <string name="copy_link">Copy Link</string>
    <string name="dead">Dead</string>
    <string name="delete">Delete</string>
    <string name="deny">Deny</string>
    <string name="directory_cannot_accessed">Directory cannot be accessed</string>
    <string name="discharging">Discharging</string>
    <string name="documents">Documents</string>
    <string name="duplicates_found">duplicates found</string>
    <string name="error">Error</string>
    <string name="error_occured">Error occurred please try again</string>
    <string name="exclude_any_of_installed">Exclude any of your installed apps from Junk Cleaner, Phone Boost and CPU Cooler</string>
    <string name="exclude_apps_string">Exclude any of your apps from Junk Cleaner, Speed Booster and CPU Cooler options of the app. No actions will be performed on the selected apps.</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="facebook">Like us on Facebook</string>
    <string name="fetch_and_activate">Fetch and activate succeeded</string>
    <string name="fetch_failed">Fetch failed</string>
    <string name="files">Files</string>
    <string name="find">Find</string>
    <string name="firebase_database_url">https://mobiclean-5587c.firebaseio.com</string>
    <string name="full">Full</string>
    <string name="game_boosting">Game Boosting…</string>
    <string name="gamesadded">Game(s) Selected</string>
    <string name="gifs">GIFs</string>
    <string name="good">Good</string>
    <string name="grant">Grant</string>
    <string name="images_found">photos</string>
    <string name="insta">Follow us on Instagram</string>
    <string name="items">Items</string>
    <string name="level">Level</string>
    <string name="low">Low</string>
    <string name="not_charging">Not Charging</string>
    <string name="noti_ignore_info">Automatic- Choosing this will allow you to receive notifications from all apps.\n\nManual- In this, you can select desired apps to receive notifications.</string>
    <string name="open_with">Open with</string>
    <string name="options_of_the_app">options of the app. No actions of these features will be performed on the selected apps.</string>
    <string name="over_voltage">Over Voltage</string>
    <string name="overheat">Overheat</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="photo">Photo</string>
    <string name="please_grant_permission">Please Grant the permission to external SD card. Otherwise files on SD card may skip while cleaning.</string>
    <string name="powered_by">Powered By:</string>
    <string name="mbc_action_reset">Reset</string>
    <string name="mbc_action_settings">Settings</string>
    <string name="mbc_active_progress">Active processes slowing down your device.</string>
    <string name="mbc_add_game_boost">Add Game(s)</string>
    <string name="mbc_addapps">Add Apps</string>
    <string name="mbc_addgames">Add Games Here</string>
    <string name="mbc_affected_apps">Affected Apps</string>
    <string name="mbc_after_boost_scan_txt">This will clear boost result.</string>
    <string name="mbc_after_upgrade_msg">Clean DO_NOT_TRANSLATE Empty Folders</string>
    <string name="mbc_after_upgrade_msg2">Clean DO_NOT_TRANSLATE Junk</string>
    <string name="mbc_all_photos">All Photos</string>
    <string name="mbc_all_photos_include">Includes all photos in the device.</string>
    <string name="mbc_almostsimilar">Almost</string>
    <string name="mbc_analyze_battery">Extending Battery Life…</string>
    <string name="mbc_analyzing">Analyzing your DO_NOT_TRANSLATE</string>
    <string name="mbc_anti_virus">Anti-Malware</string>
    <string name="mbc_apk_file">APK Files</string>
    <string name="mbc_apk_files">APK Files</string>
    <string name="mbc_app_backup_deleted">Storage Space Recovered.</string>
    <string name="mbc_app_cache">App Cache</string>
    <string name="mbc_app_lock">App Lock</string>
    <string name="mbc_app_manager">App Manager</string>
    <string name="mbc_app_name">Phone Cleaner</string>
    <string name="mbc_app_notification">App Notification</string>
    <string name="mbc_app_storage">App Storage</string>
    <string name="mbc_application_file">Application file saved to: DO_NOT_TRANSLATE</string>
    <string name="mbc_arc_ram_abvtext">RAM Used</string>
    <string name="mbc_archivd">Archived</string>
    <string name="mbc_archived">Archived(DO_NOT_TRANSLATE )</string>
    <string name="mbc_are_u_sure">Are you sure you want to exit?</string>
    <string name="mbc_at_least">Please select at least one threat</string>
    <string name="mbc_at_leastone">Please check at least one item</string>
    <string name="mbc_atleastone_boost">Select at least one process to boost.</string>
    <string name="mbc_av_noti_down_one">appears malicious.</string>
    <string name="mbc_av_noti_down_two">is scanned and found safe.</string>
    <string name="mbc_av_protected">Your device is fully protected</string>
    <string name="mbc_backup">Backup</string>
    <string name="mbc_backup_done">Backup of Selected App(s)\n Successfully Completed</string>
    <string name="mbc_bat_low_alert">Background apps are consuming high amount of battery. Boost battery now to increase your battery time.</string>
    <string name="mbc_battery_capicty">Battery Capacity</string>
    <string name="mbc_battery_health">Battery Health</string>
    <string name="mbc_battery_low">Low Battery!</string>
    <string name="mbc_battery_saver">Battery Saver</string>
    <string name="mbc_battery_scan_txt">This will terminate battery boosting.</string>
    <string name="mbc_battery_status">Battery Percentage</string>
    <string name="mbc_battery_temp">Battery Temp</string>
    <string name="mbc_battery_type">Battery Type</string>
    <string name="mbc_battery_voltage">Battery Voltage</string>
    <string name="mbc_bluetooth">Bluetooth</string>
    <string name="mbc_boost">BOOST</string>
    <string name="mbc_boost_scan_txt">This will stop analyzing phone for the boost process.</string>
    <string name="mbc_boosted">Boosted</string>
    <string name="mbc_boosting">Boosting…</string>
    <string name="mbc_boostt">Boost</string>
    <string name="mbc_browser">However, you aren’t invisible. Surfing privately does not hide your browsing from your internet service provider or employer or the websites you visit.</string>
    <string name="mbc_browsing">Pages you view here will not reside in your browser’s history, cookie store, or search history after you exit from here. Any files you download here will be stored &amp; not deleted.</string>
    <string name="mbc_camera">Camera Roll</string>
    <string name="mbc_camera_include">Includes photos clicked with your device.</string>
    <string name="mbc_cameraroll">Camera Roll</string>
    <string name="mbc_cancel">Cancel</string>
    <string name="mbc_cancel_button_label">Cancel</string>
    <string name="mbc_cant_delete">All photos of the same group cannot be marked</string>
    <string name="mbc_cant_deleted">This photo can’t be deleted as all the other photos of this group are marked.</string>
    <string name="mbc_cant_ignored">This photo can’t be ignored as all the other photos of this group are marked.</string>
    <string name="mbc_capture_photos">You just captured photos. Check for duplicates.</string>
    <string name="mbc_charging">Charging</string>
    <string name="mbc_check">check</string>
    <string name="mbc_check_dups">Check Duplicates</string>
    <string name="mbc_chngescan">Scan Settings</string>
    <string name="mbc_choose_button_label">Select</string>
    <string name="mbc_clean">Clean</string>
    <string name="mbc_cleaning">Cleaning…</string>
    <string name="mbc_cleaning_aborted">Junk Cleaned</string>
    <string name="mbc_cleanonefolder">Clean 1 Empty Folder</string>
    <string name="mbc_clearresult">Do you want to go back? This will clear scan results.</string>
    <string name="mbc_completed">Completed</string>
    <string name="mbc_congrats">Congratulations</string>
    <string name="mbc_continues">Continue</string>
    <string name="mbc_cool_down">Cool Down</string>
    <string name="mbc_cool_down_complete">Cool Down Complete</string>
    <string name="mbc_coolingdown">Cooling down…</string>
    <string name="mbc_cpu_cooler">CPU Cooler</string>
    <string name="mbc_cpu_cooler_noti_detail">Remind me to cool down phone temperature</string>
    <string name="mbc_cpu_cooler_noti_detail_off">Don’t remind to cool down phone temperature</string>
    <string name="mbc_cpu_cooler_scan">Analyzing CPU Temperature</string>
    <string name="mbc_cpu_scan_txt">This will stop CPU Temperature Analyzing.</string>
    <string name="mbc_cpu_usage">CPU Usage</string>
    <string name="mbc_cpuheating">CPU Heating Processes</string>
    <string name="mbc_create_date">Modified Date</string>
    <string name="mbc_create_date_description">List the images according to their modified dates</string>
    <string name="mbc_critical_issues">Critical issues found!</string>
    <string name="mbc_currentversion">Current version V DO_NOT_TRANSLATE</string>
    <string name="mbc_defaults">Default</string>
    <string name="mbc_delete">Delete</string>
    <string name="mbc_delete_app_file">Are you sure you want to delete selected backup file(s)?</string>
    <string name="mbc_delete_junk">Clean Junk</string>
    <string name="mbc_duplicate_automark">Auto Mark</string>
    <string name="mbc_gps">GPS</string>
    <string name="mbc_high">High</string>
    <string name="mbc_ignore">Ignore this image</string>
    <string name="mbc_info">Info</string>
    <string name="mbc_lock">Lock Image</string>
    <string name="mbc_mark_all">Mark All</string>
    <string name="mbc_matchingleab">Matching Level</string>
    <string name="mbc_mb">MB</string>
    <string name="mbc_noappstores">No apps to restore.</string>
    <string name="mbc_nogames_added">No Games To Add</string>
    <string name="mbc_ok">OK</string>
    <string name="mbc_private_browsing">Secure Browsing</string>
    <string name="mbc_restore">RESTORE</string>
    <string name="mbc_search_url">Search or type URL</string>
    <string name="mbc_smart_selection">Smart Selection</string>
    <string name="mbc_sort_by_date">Sort By Date</string>
    <string name="mbc_sort_by_name">Sort By Name</string>
    <string name="mbc_sort_by_size">Sort By Size</string>
    <string name="mbc_space_optimized">Recoverable Space</string>
    <string name="mbc_system_cache">System Cache</string>
    <string name="mbc_unlock">Unlock Image</string>
    <string name="mbc_unmark_all">Unmark All</string>
    <string name="time_gap">Time Gap</string>
</resources>