<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/info" android:id="@+id/action_imagedetail" android:title="@string/mbc_info"/>
    <item android:id="@+id/lock" android:visible="true" android:orderInCategory="1" android:title="@string/mbc_lock" app:showAsAction="never"/>
    <item android:id="@+id/un_lock" android:visible="false" android:orderInCategory="1" android:title="@string/mbc_unlock" app:showAsAction="never"/>
    <item android:id="@+id/ignore" android:visible="true" android:orderInCategory="1" android:title="@string/mbc_ignore" app:showAsAction="never"/>
    <item android:id="@+id/delete" android:visible="true" android:orderInCategory="1" android:title="@string/mbc_delete" app:showAsAction="never"/>
</menu>
