<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_mark"
        android:icon="@drawable/close"
        android:menuCategory="secondary"
        android:orderInCategory="2"
        android:title="@string/mbc_action_settings"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_automark"
        android:orderInCategory="1"
        android:title="@string/mbc_duplicate_automark"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_markall"
        android:orderInCategory="1"
        android:title="@string/mbc_mark_all"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unmarkall"
        android:orderInCategory="2"
        android:title="@string/mbc_unmark_all"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/assistant"
        android:orderInCategory="3"
        android:title="@string/mbc_smart_selection"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settingscan"
        android:orderInCategory="4"
        android:title="@string/mbc_chngescan"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/mbc_action_settings"
        android:visible="false"
        app:showAsAction="never" />
</menu>
