<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sidebar_header_color"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/sidebar_header_color"
        android:elevation="0dp"
        android:theme="@style/ToolbarColoredBackArrow"
        app:contentInsetStartWithNavigation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mbc_system_cache"
            android:textColor="@color/text_color"
            android:textSize="18dp"
            android:transitionName="header" />
    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/listcachedelte"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sidebar_header_color" />

    <TextView
        android:id="@+id/emptytv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/mbc_nogames_added"
        android:visibility="gone" />
</LinearLayout>
