<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_emptybackup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/mbc_noappstores"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rviewback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize" />

    <LinearLayout
        android:id="@+id/btnlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/app_restore"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_44"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_drawable"
            android:text="@string/mbc_restore"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/app_delete"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_drawable_red"
            android:text="@string/mbc_delete"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
